# slint-ritel-ml-rs

./: .gitignore  BusinessREADME.md  Cargo.toml  README.md  implementation_plan.md  workflow.db
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/ui/ui/: app-window.slint
crates/ui/ui/components/: node-widget.slint  sidebar-whole.slint  styles.slint
crates/ui/ui/models/: node_data.slint
crates/use_cases/: Cargo.toml
crates/use_cases/src/: lib.rs  step_logic.rs
