[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = {path="../domain"}
use_cases = { path = "../use_cases" }
infra = { path = "../infra" }
slint = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
native-dialog = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }